--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -58,7 +58,6 @@ textarea {
   display: inline-block;
   box-shadow: inset 2px 2px 2px 0px rgba(255, 255, 255, 0.5),
     7px 7px 20px 0px rgba(0, 0, 0, 0.1), 4px 4px 5px 0px rgba(0, 0, 0, 0.1);
-  margin-bottom: 25px;
 }
 
 .gallery {
@@ -66,12 +65,11 @@ textarea {
   list-style: none;
   display: flex;
   gap: 24px;
-  margin-left: auto;
-  margin-right: auto;
   flex-wrap: wrap;
   justify-content: center;
   align-items: center;
   padding: 24px 156px;
+  margin: 0 auto;
 }
 
 .gallery-item {
